Minor overlap fix
Password strength gauge was overlapped by the password confirm label when the password confirm field was active/filled in. That is fixed now

--- a/public/styles/new-user.module.scss
+++ b/public/styles/new-user.module.scss
@@ -1,5 +1,5 @@
 .strength {
-  margin: 0;
+  margin: 5px 0;
   font-size: .7rem;
   padding: 2px;
   text-align: center;
